--- a/chat/styles/styleChat.css
+++ b/chat/styles/styleChat.css
@@ -19,8 +19,7 @@ body
 
 iframe
 {
-    height: 80%;
-
+    height: 95%;
     width: 90%;
 
     margin: 0px auto;
@@ -31,9 +30,13 @@ iframe
 
 form
 {
-    height: 20%;
     margin: 0px auto;
     
     display: flex;
     flex-direction: row;
+}
+
+#send
+{
+    padding: 20px;
 }
